@@ -31,6 +31,7 @@
                         command     : lCommand,
                         method      : lMethod,
                         body        : pBody,
+                        request     : lReq,
                         response    : lRes
                     });
                 
@@ -57,7 +58,7 @@
     /**
      * getting data on method and command
      * 
-     * @param pParams {command, method, body, response}
+     * @param pParams {command, method, body, requrest, response}
      */
     function getData(pParams){
         var lResult,
@@ -85,7 +86,7 @@
     /**
      * process data on GET request
      * 
-     * @param pParams {command, method, body, response}
+     * @param pParams {command, method, body, requrest, response}
      */
     function onGET(pParams){
         var lResult = {error: 'command not found'},
@@ -114,7 +115,7 @@
     /**
      * process data on PUT request
      * 
-     * @param pParams {command, method, body, response}
+     * @param pParams {command, method, body, requrest, response}
      */
     function onPUT(pParams){
         var lResult = {error: 'command not found'},
@@ -128,23 +129,16 @@
                     send(lRes, pTocken);
                 });
                 lResult = false;
+                
                 break;
             
-            /* Example:
-             * read=[lib/dom.js, lib/cloudfunc.js, client.js]
-             */
             case 'read':
                 console.log(lBody);
                 var lFiles = lBody;
-                
+                                
                 if( Util.isString(lFiles) ){
-                    lRes.writeHead(OK, main.generateHeaders(lFiles, true) );
-                    
-                    fs.createReadStream(lFiles, {
-                        'bufferSize': 4 * 1024
-                    })
-                    .pipe( zlib.createGzip() )
-                    .pipe(lRes);
+                    pParams.name = lFiles;
+                    main.sendFile(pParams);
                     
                     lResult = null;
                 }
