@@ -112,6 +112,8 @@ set enveronment varibles "oauth_client_id" and
 
 * Changed funcyBox version to 2.1.3.
 
+* Improved reading file with streams.
+
 
 2012.10.01, Version 0.1.7
 
